--- a/src/main/resources/templates/fragments/navbar.html
+++ b/src/main/resources/templates/fragments/navbar.html
@@ -86,21 +86,21 @@
                        aria-expanded="false">
                         Login
                     </a>
-                    <ul class="dropdown-menu">
+                    <ul class="dropdown-menu dropdown-menu-lg-end">
                         <li><a class="dropdown-item" th:href="@{/user/login}">Login as user</a></li>
                         <li><a class="dropdown-item" th:href="@{/employee/login}">Login as employee</a></li>
                     </ul>
                 </li>
-                <li th:unless="${#authorization.expression('isAuthenticated()')}" class="nav-item dropdown">
-                    <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown"
-                       aria-expanded="false">
-                        Register
-                    </a>
-                    <ul class="dropdown-menu position-absolute" style="left: 0 !important;">
-                        <li><a class="dropdown-item" th:href="@{/user/register}">Register as user</a></li>
-                        <li><a class="dropdown-item" th:href="@{/employee/register}">Register as employee</a></li>
-                    </ul>
-                </li>
+<!--                <li th:unless="${#authorization.expression('isAuthenticated()')}" class="nav-item dropdown">-->
+<!--                    <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown"-->
+<!--                       aria-expanded="false">-->
+<!--                        Register-->
+<!--                    </a>-->
+<!--                    <ul class="dropdown-menu position-absolute" style="left: 0 !important;">-->
+<!--                        <li><a class="dropdown-item" th:href="@{/user/register}">Register as user</a></li>-->
+<!--                        <li><a class="dropdown-item" th:href="@{/employee/register}">Register as employee</a></li>-->
+<!--                    </ul>-->
+<!--                </li>-->
 
             </ul>
         </div>
