--- a/src/main/resources/templates/login_user.html
+++ b/src/main/resources/templates/login_user.html
@@ -11,7 +11,7 @@
 <div class="col-6 container flex-grow-1">
 
     <h1>User login</h1>
-
+    <a href="/user/register" class="text-primary">Don't have an account? Sign up here</a>
     <div th:if="${param.error}">
         Invalid username and password.
     </div>
