User basket - items + price + total price + buy now button

--- a/src/main/resources/templates/basket.html
+++ b/src/main/resources/templates/basket.html
@@ -8,28 +8,39 @@
 <body class="d-flex flex-column min-vh-100">
 <div class="col-6 container flex-grow-1 mt-5 mb-5">
     <div class="row justify-content-center">
-        <div th:if="${not #lists.isEmpty(orderList)}">
-            <h2>
-                <p class="fw-bold"><span class="text-success"
-                                         th:text="${userDetails.username}"></span>'s basket:</p></h2>
-            <hr/>
+        <h2>
+            <p class="fw-bold">
+                <span class="text-success" th:text="${userDetails.username}"></span>'s basket:
+            </p>
+        </h2>
+
+        <hr/>
+
+        <div th:if="${not #lists.isEmpty(orderedProducts)}">
+
             <ul class="list-group list-group-flush">
-                <li class="list-group-item" th:each="order : ${orderList}">
-                    <span>Products:</span>
-                    <ul>
-                        <li th:each="orderedProduct : ${orderedProducts}"
-                            th:if="${orderedProduct.order.id == order.id}">
-                            <span th:text="${orderedProduct.quantity+'x'}"></span>
-                            <span th:text="${orderedProduct.product.name}"></span>
-                            <span th:text="${'('+orderedProduct.product.price+')'}"></span>
-                        </li>
-                    </ul>
-                    <li>
-                        <span>Total Price: <span th:text="${totalPrice}"></span></span><br>
+                <span>Products:</span>
+                <ul>
+                    <li th:each="orderedProduct : ${orderedProducts}">
+                        <span th:text="${orderedProduct.quantity + 'x'}"></span>
+                        <span th:text="${orderedProduct.product.name}"></span>
+                        <span th:text="${ '(' + orderedProduct.product.price + ')' }"></span>
+                        <span th:text="${ 'Total: ' + (orderedProduct.quantity * orderedProduct.product.price) }"></span>
                     </li>
+                </ul>
+                <li>
+                    <span>Total Price: <span th:text="${totalPrice}"></span></span><br>
                 </li>
             </ul>
+
+            <a class="btn btn-primary mb-5 mt-3" href="#" role="button">Buy now (order becomes Pending)</a>
+
         </div>
+
+        <div th:if="${#lists.isEmpty(orderedProducts)}">
+            <p>Your basket is empty.</p>
+        </div>
+
     </div>
 </div>
 </body>
