--- a/src/main/resources/templates/products_all.html
+++ b/src/main/resources/templates/products_all.html
@@ -27,9 +27,11 @@
         </form>
     </div>
 
-    <div class="text-center col-4 container flex-grow-1 mt-3 mb-3" sec:authorize="hasRole('ROLE_ADMIN') or hasRole('ROLE_EMPLOYEE')">
+    <div class="text-center col-4 container flex-grow-1 mt-3 mb-3"
+         sec:authorize="hasRole('ROLE_ADMIN') or hasRole('ROLE_EMPLOYEE')">
         <form th:action="@{/products/sort}" method="get">
-            <select id="sortSelect" class="form-select mr-2" name="sortType" onchange="this.form.action='/products/sort?sortType=' + this.value; this.form.submit();">
+            <select id="sortSelect" class="form-select mr-2" name="sortType"
+                    onchange="this.form.action='/products/sort?sortType=' + this.value; this.form.submit();">
                 <option value="" selected disabled>Choose sorting type</option>
                 <option value="byName">Sort by Name</option>
                 <option value="byPrice">Sort by Price</option>
@@ -42,24 +44,23 @@
         <div class="col mb-4" th:each="product : ${products}">
             <div class="card h-100 d-flex flex-column">
 
-                <a th:href="@{'/products/show/' + ${product.id}}" th:if="${product.imageLocation != null}">
+                <span th:if="${product.imageLocation != null}">
                     <img th:src="@{'/images/' + ${product.imageLocation}}"
                          class="card-img-top img-fluid img-thumbnail"/>
-                </a>
-
+                </span>
                 <div class="card-body flex-grow-1 text-center">
-                    <a th:href="@{'/products/show/' + ${product.id}}" th:if="${product.name != null}">
+                     <span th:if="${product.name != null}">
                         <h5 class="card-title" th:text="${product.name}">Product Name</h5>
-                    </a>
+                    </span>
                     <p class="card-text text-danger" th:text="${product.price +'лв.'}">Price: $0.00</p>
-                    </a>
                 </div>
 
                 <div class="card-footer">
-                    <a th:href="@{'/user/login'}" sec:authorize="isAnonymous()" class="btn btn-primary">Login to Add to Cart</a>
+                    <a th:href="@{'/user/login'}" sec:authorize="isAnonymous()" class="btn btn-primary">Login to Add to
+                        Cart</a>
                     <div sec:authorize="isAuthenticated()">
                         <!--  TODO: add to basket - quantity 1 ->  /products/add_to_basket -->
-                        <a href="#" class="btn btn-primary">Add to cart</a>
+                        <a th:href="@{'/products/show/' + ${product.id}}" class="btn btn-primary">Show more</a>
                     </div>
                     <div sec:authorize="hasRole('ROLE_ADMIN') or hasRole('ROLE_EMPLOYEE')">
                         <a th:href="@{'/products/edit?id=' + ${product.id}}" class="btn btn-warning">Edit</a>
