--- a/src/main/resources/templates/profile.html
+++ b/src/main/resources/templates/profile.html
@@ -32,7 +32,7 @@
                                                                       th:text="${#lists.size(orders)}"></span>
                     </p>
                     <p class="fw-normal lead">
-                        <a th:href="@{/products/show_basket}" class="text-primary">Your basket</a> | <a href="/change_password"
+                        <a th:href="@{/products/show_basket}" class="text-primary">Your basket</a> | <a th:href="@{/change-password}"
                                                                                      class="text-primary">Change
                         password</a>
                     </p>
