--- a/src/main/resources/templates/basket.html
+++ b/src/main/resources/templates/basket.html
@@ -18,20 +18,44 @@
 
         <div th:if="${not #lists.isEmpty(orderedProducts)}">
 
-            <ul class="list-group list-group-flush">
-                <span>Products:</span>
-                <ul>
-                    <li th:each="orderedProduct : ${orderedProducts}">
-                        <span th:text="${orderedProduct.quantity + 'x'}"></span>
-                        <span th:text="${orderedProduct.product.name}"></span>
-                        <span th:text="${ '(' + orderedProduct.product.price + ')' }"></span>
-                        <span th:text="${ 'Total: ' + (orderedProduct.quantity * orderedProduct.product.price) }"></span>
-                    </li>
-                </ul>
-                <li>
-                    <span>Total Price: <span th:text="${totalPrice}"></span></span><br>
-                </li>
-            </ul>
+            <table class="table">
+                <thead>
+                <tr>
+                    <th>Product Name</th>
+                    <th>Price</th>
+                    <th>Quantity</th>
+                    <th>Action</th>
+                    <th>Total</th>
+                </tr>
+                </thead>
+                <tbody>
+                <tr th:each="orderedProduct : ${orderedProducts}">
+                    <form th:action="@{/user/updateQuantity}" method="post">
+                        <input type="hidden" th:name="productId" th:value="${orderedProduct.product.id}" />
+                        <input type="hidden" name="orderId" th:value="${order_id}" />
+                        <td th:text="${orderedProduct.product.name}"></td>
+                        <td th:text="${orderedProduct.product.price}"></td>
+                        <td>
+                            <input type="number" name="quantity" th:value="${orderedProduct.quantity}" min="0">
+                        </td>
+                        <td>
+                            <button type="submit" class="btn btn-primary">Update Quantity</button>
+                        </td>
+                        <td th:text="${ orderedProduct.quantity * orderedProduct.product.price }"></td>
+                    </form>
+                </tr>
+
+                <tr>
+                    <td></td>
+                    <td></td>
+                    <td></td>
+                    <td>Total Price:</td>
+                    <td><span th:text="${totalPrice}"></span></td>
+                </tr>
+                </tbody>
+            </table>
+
+
 
             <a class="btn btn-primary mb-5 mt-3" href="#" role="button">Buy now (order becomes Pending)</a>
 
