--- a/src/main/resources/templates/change_password.html
+++ b/src/main/resources/templates/change_password.html
@@ -15,25 +15,24 @@
             <h2>Change Password</h2>
             <form action="#" th:action="@{/save-password}" method="post">
 
-                <span th:if="${success != null}" th:text="${success}" style="color: green;"></span>
-
+                <p class="text-success" th:text="${success != null} ? ${success}"></p>
 
                 <div class="form-group">
                     <label for="currentPassword">Current Password:</label>
-                    <input type="password" id="currentPassword" name="currentPassword" class="form-control" required>
-                    <span th:if="${wrong_password != null}" th:text="${wrong_password}" style="color: red;"></span>
+                    <input type="password" id="currentPassword" name="currentPassword" class="form-control">
+                    <p class="text-danger" th:text="${wrong_password != null} ? ${wrong_password}"></p>
+
                 </div>
                 <div class="form-group">
                     <label for="newPassword">New Password:</label>
-                    <input type="password" id="newPassword" name="newPassword" class="form-control" required>
+                    <input type="password" id="newPassword" name="newPassword" class="form-control">
                 </div>
                 <div class="form-group">
                     <label for="confirmPassword">Confirm New Password:</label>
-                    <input type="password" id="confirmPassword" name="confirmPassword" class="form-control" required>
+                    <input type="password" id="confirmPassword" name="confirmPassword" class="form-control">
                 </div>
-                <div class="form-group" th:if="${not_matching_passwords != null}"
-                     th:text="${not_matching_passwords}" style="color: red;">
-                </div>
+                <p class="text-danger" th:text="${not_matching_passwords != null} ? ${not_matching_passwords}"></p>
+
                 <button type="submit" class="btn btn-secondary btn-lg">Change Password</button>
             </form>
         </div>
