--- a/src/main/resources/templates/basket.html
+++ b/src/main/resources/templates/basket.html
@@ -42,6 +42,13 @@
                             <button type="submit" class="btn btn-primary">Update Quantity</button>
                         </td>
                         <td th:text="${ orderedProduct.quantity * orderedProduct.product.price }"></td>
+                        <td>
+					<span th:each="error : ${productsNotFound}"
+                          th:if="${error.startsWith(orderedProduct.product.id + '-')}"
+                          class="text-danger">
+						Not enough stock. <span th:text="${error.substring(error.lastIndexOf('(') + 1, error.lastIndexOf(')'))}"></span>
+					</span>
+                        </td>
                     </form>
                 </tr>
 
@@ -54,15 +61,22 @@
                 </tr>
                 </tbody>
             </table>
-
-
-
-            <a class="btn btn-primary mb-5 mt-3" href="#" role="button">Buy now (order becomes Pending)</a>
-
         </div>
 
-        <div th:if="${#lists.isEmpty(orderedProducts)}">
-            <p>Your basket is empty.</p>
+        <form th:action="@{/user/basket/buy}" method="post">
+            <div th:if="${not #lists.isEmpty(orderedProducts)}">
+                <button type="submit" class="btn btn-primary btn-lg">Buy now (order becomes Pending)</button>
+            </div>
+        </form>
+
+        <div th:if="${success}" class="alert alert-success">
+            <p th:text="${success}"></p>
+        </div>
+
+        <div th:if="${#strings.isEmpty(success)}">
+            <div th:if="${#lists.isEmpty(orderedProducts)}">
+                <p>Your basket is empty.</p>
+            </div>
         </div>
 
     </div>
