--- a/src/main/resources/templates/profile.html
+++ b/src/main/resources/templates/profile.html
@@ -32,7 +32,7 @@
                                                                       th:text="${#lists.size(orders)}"></span>
                     </p>
                     <p class="fw-normal lead" sec:authorize="hasRole('ROLE_USER')">
-                        <a th:href="@{/user/show_basket}" class="text-primary">Your basket</a> |
+                        <a th:href="@{/user/basket/show}" class="text-primary">Your basket</a> |
                         <a href="/change_password" class="text-primary">Change password</a>
                     </p>
                 </div>
