--- a/src/main/resources/templates/register_user.html
+++ b/src/main/resources/templates/register_user.html
@@ -13,7 +13,7 @@
     <div class="row justify-content-center">
         <div class="col-md-6">
             <h2 class="mb-4 text-center">Registration form (User)</h2>
-            <form action="#" th:action="@{/register}" th:object="${userRequestDto}" method="post">
+            <form action="#" th:action="@{/user/register}" th:object="${userRequestDto}" method="post">
                 <div class="form-group">
                     <label for="firstName">First name:</label>
                     <input type="text" th:field="*{firstName}" class="form-control" id="firstName" placeholder="Enter First name">
