--- a/src/main/resources/templates/change_password.html
+++ b/src/main/resources/templates/change_password.html
@@ -13,7 +13,7 @@
     <div class="row justify-content-center">
         <div class="col-md-6">
             <h2>Change Password</h2>
-            <form action="#" th:action="@{/save-password}" method="post">
+            <form action="#" th:action="@{/password/save}" method="post">
 
                 <p class="text-success" th:text="${success != null} ? ${success}"></p>
 
