--- a/src/main/resources/templates/orders_all.html
+++ b/src/main/resources/templates/orders_all.html
@@ -8,7 +8,7 @@
 
 <body class="d-flex flex-column min-vh-100">
 
-<div class="col-6 container flex-grow-1 mt-5 mb-5">
+<div class="col-6 container flex-grow-1 mt-6 mb-6">
     <div class="row justify-content-center">
         <table class="table table-hover">
             <thead>
@@ -18,10 +18,13 @@
                 <th scope="col">Order date</th>
                 <th scope="col">Products</th>
                 <th scope="col">Price</th>
-                <th scope="col">Status</th>
-                <th scope="col"></th>
+                <th scope="col" style="width: 140px;">Status</th>
+                <th scope="col" style="width: 150px;"></th>
             </tr>
             </thead>
+            <div th:if="${success}" class="alert alert-success">
+                <p th:text="${success}"></p>
+            </div>
             <tbody>
             <tr th:each="order : ${orders}">
                 <span th:if="${order.status.name == 'PENDING'}">
@@ -36,17 +39,20 @@
                 </span>
                 </td>
                 <td th:text="${order.price}"></td>
+                    <form th:action="@{/orders/changeStatus}" method="post">
+                        <input type="hidden" name="orderId" th:value="${order.id}">
                 <td>
-                    <form th:action="@{/changeStatus}" method="post">
-                        <select class="form-select">
+                        <select class="form-select" name="statusId">
                             <option th:each="status : ${statuses}"
                                     th:text="${status.name}"
                                     th:value="${status.id}"
                                     th:selected="${status.id == order.status.id}"></option>
                         </select>
-                        <button type="submit">Save</button>
-                    </form>
                 </td>
+                <td>
+                   <button type="submit" class="btn btn-primary">Save status</button>
+                </td>
+                    </form>
                 </span>
             </tr>
             </tbody>
