--- a/src/main/resources/templates/products_all.html
+++ b/src/main/resources/templates/products_all.html
@@ -1,16 +1,18 @@
 <!DOCTYPE html>
-<html lang="en" xmlns:th="http://www.w3.org/1999/xhtml" xmlns:sec="http://www.w3.org/1999/xhtml">
+<html lang="en" xmlns:th="http://www.w3.org/1999/xhtml" xmlns:sec="http://www.w3.org/1999/xhtml"
+      xmlns="http://www.w3.org/1999/html">
 <head th:replace="~{fragments/head.html(title='Products')}"></head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css">
-<title>Title</title>
+<title>Products</title>
 </head>
 <nav th:replace="~{fragments/navbar.html}"></nav>
 <body class="d-flex flex-column min-vh-100">
 <div class="container">
     <h1 class="text-center mt-4">Products</h1>
     <div class="text-center col-4 container flex-grow-1 mt-3 mb-3">
+        <h4><span th:text="${search_by_price_results != null} ? ${search_by_price_results}"></span></h4>
         <form th:action="@{/products/filter}" method="get">
             <select id="categorySelect" class="form-select mr-2" name="category"
                     onchange="this.form.action='/products/filter?category=' + this.value; this.form.submit();"
