Bug fix for add-new accessories + search by price validations added

--- a/src/main/resources/templates/fragments/navbar.html
+++ b/src/main/resources/templates/fragments/navbar.html
@@ -48,14 +48,10 @@
                             <ul class="dropdown-menu dropdown-submenu">
                                 <li><a class="dropdown-item" th:href="@{/products/add?productType=Drink}">Drink</a></li>
                                 <li><a class="dropdown-item" th:href="@{/products/add?productType=Food}">Food</a></li>
-                                <li><a class="dropdown-item"
-                                       th:href="@{/products/add?productType=Sanitary}">Sanitary</a></li>
-                                <li><a class="dropdown-item" th:href="@{/products/add?productType=Railing}">Railing</a>
-                                </li>
-                                <li><a class="dropdown-item"
-                                       th:href="@{/products/add?productType=Accessory}">Accessory</a></li>
-                                <li><a class="dropdown-item" th:href="@{/products/add?productType=Decoration}">Decoration</a>
-                                </li>
+                                <li><a class="dropdown-item" th:href="@{/products/add?productType=Sanitary}">Sanitary</a></li>
+                                <li><a class="dropdown-item" th:href="@{/products/add?productType=Railing}">Railing</a></li>
+                                <li><a class="dropdown-item" th:href="@{/products/add?productType=Accessories}">Accessory</a></li>
+                                <li><a class="dropdown-item" th:href="@{/products/add?productType=Decoration}">Decoration</a></li>
                                 <li><a class="dropdown-item" th:href="@{/products/add?productType=Others}">Others</a>
                                 </li>
                             </ul>
