--- a/src/main/resources/templates/404_page_not_found.html
+++ b/src/main/resources/templates/404_page_not_found.html
@@ -18,5 +18,6 @@
         integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
         crossorigin="anonymous"></script>
 </body>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
 <div th:replace="~{fragments/footer.html}"></div>
 </html>
