--- a/src/main/resources/templates/product_edit.html
+++ b/src/main/resources/templates/product_edit.html
@@ -18,14 +18,17 @@
                 <div class="form-group">
                     <label for="productName">Product name:</label>
                     <input type="text" th:field="*{name}" th:value="${product.name}" class="form-control" id="productName">
+                    <p class="text-danger" th:text="${name_too_short}"></p>
                 </div>
                 <div class="form-group">
                     <label for="productPrice">Product price:</label>
                     <input type="number" th:field="*{price}" th:value="${product.price}" class="form-control" id="productPrice">
+                    <p class="text-danger" th:text="${price_too_low}"></p>
                 </div>
                 <div class="form-group">
                     <label for="productQuantity">Product quantity:</label>
                     <input type="number" th:field="*{quantity}" th:value="${product.quantity}" class="form-control" id="productQuantity">
+                    <p class="text-danger" th:text="${quantity_too_low}"></p>
                 </div>
                 <div class="text-center">
                     <button type="submit" class="btn btn-secondary btn-lg">Save changes</button>
