Added search by price function.

--- a/src/main/resources/templates/products_all.html
+++ b/src/main/resources/templates/products_all.html
@@ -13,6 +13,8 @@
     <h1 class="text-center mt-4">Products</h1>
     <div class="text-center col-4 container flex-grow-1 mt-3 mb-3">
         <h4><span th:text="${search_by_price_results != null} ? ${search_by_price_results}"></span></h4>
+        <h4><span th:text="${search_by_quantity_results != null} ? ${search_by_quantity_results}"></span></h4>
+        <h4><span th:text="${list_empty != null} ? ${list_empty}"></span></h4>
         <form th:action="@{/products/filter}" method="get">
             <select id="categorySelect" class="form-select mr-2" name="category"
                     onchange="this.form.action='/products/filter?category=' + this.value; this.form.submit();"
