--- a/src/main/resources/templates/search_by_price.html
+++ b/src/main/resources/templates/search_by_price.html
@@ -4,7 +4,7 @@
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css">
-<title>Title</title>
+<title>Search By Price</title>
 </head>
 <nav th:replace="~{fragments/navbar.html}"></nav>
 <body class="d-flex flex-column min-vh-100">
