Search by quantity - bug fixed when one or both quantity fields are blank

--- a/src/main/resources/templates/search_by_quantity.html
+++ b/src/main/resources/templates/search_by_quantity.html
@@ -22,6 +22,7 @@
                     </div>
                     <p class="text-danger" th:text="${incorrect_quantity}"></p>
                     <p class="text-danger" th:text="${min_bigger_than_max}"></p>
+                    <p class="text-danger" th:text="${blank_field}"></p>
                 </div>
             </div>
         </form>
