--- a/src/main/resources/templates/search_by_quantity.html
+++ b/src/main/resources/templates/search_by_quantity.html
@@ -15,11 +15,34 @@
                 <div class="card-body">
                     <h3> Search products by quantity </h3>
                     <hr/>
-                    <div class="input-group">
-                        <input type="number" aria-label="First name" class="form-control" name="minQuantity" placeholder="Enter min. quantity">
-                        <input type="number" aria-label="Last name" class="form-control" name="maxQuantity" placeholder="Enter max. quantity">
-                        <button class="btn btn-outline-secondary" type="submit">Search</button>
+                    <div class="container">
+                        <form>
+                            <div class="row">
+                                <div class="col-md-6">
+                                    <div class="form-group">
+                                        <label for="minQuantity">Enter min. quantity</label>
+                                        <input type="number" class="form-control" id="minQuantity" name="minQuantity"
+                                               placeholder="Enter min. quantity" th:value="${minQuantity}"
+                                               th:min="${minQuantity}" th:max="${maxQuantity}">
+                                    </div>
+                                </div>
+                                <div class="col-md-6">
+                                    <div class="form-group">
+                                        <label for="maxQuantity">Enter max. quantity</label>
+                                        <input type="number" class="form-control" id="maxQuantity" name="maxQuantity"
+                                               placeholder="Enter max. quantity" th:value="${maxQuantity}"
+                                               th:min="${minQuantity}" th:max="${maxQuantity}">
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="row mt-3">
+                                <div class="col-md-6 offset-md-3 text-center">
+                                    <button type="submit" class="btn btn-outline-secondary btn-block">Search</button>
+                                </div>
+                            </div>
+                        </form>
                     </div>
+
                     <p class="text-danger" th:text="${incorrect_quantity}"></p>
                     <p class="text-danger" th:text="${min_bigger_than_max}"></p>
                     <p class="text-danger" th:text="${blank_field}"></p>
