Fixed a bug where it would add empty sortType and return an empty result page.

--- a/src/main/resources/templates/products_all.html
+++ b/src/main/resources/templates/products_all.html
@@ -147,7 +147,7 @@
             actionUrl += '?category=' + category;
         }
 
-        if (sortType) {
+        if (sortType !== 'Choose sorting type') {
             actionUrl += '&sortType=' + sortType + '&ascending=' + ascending;
         }
 
