--- a/src/main/resources/templates/products_all.html
+++ b/src/main/resources/templates/products_all.html
@@ -16,7 +16,19 @@
         <h4><span th:text="${search_by_quantity_results != null} ? ${search_by_quantity_results}"></span></h4>
         <h4><span th:text="${list_empty != null} ? ${list_empty}"></span></h4>
         <form method="get">
-            <select id="categorySelect" class="form-select mr-2" name="category">
+            <select id="categorySelect" class="form-select mr-2" name="category" sec:authorize="hasRole('ROLE_ADMIN') or hasRole('ROLE_EMPLOYEE')">
+                <option value="PRODUCT" th:selected="${category == null || category == 'PRODUCT'}">Show All</option>
+                <option value="FOOD" th:selected="${category == 'FOOD'}">Food</option>
+                <option value="DRINK" th:selected="${category == 'DRINK'}">Drink</option>
+                <option value="SANITARY" th:selected="${category == 'SANITARY'}">Sanitary</option>
+                <option value="RAILING" th:selected="${category == 'RAILING'}">Railing</option>
+                <option value="ACCESSORIES" th:selected="${category == 'ACCESSORIES'}">Accessories</option>
+                <option value="DECORATION" th:selected="${category == 'DECORATION'}">Decoration</option>
+                <option value="OTHERS" th:selected="${category == 'OTHERS'}">Others</option>
+            </select>
+            <!-- I know that this is not pretty and there should be a better way, but everything I tried with Javascript fails -->
+            <select id="categorySelect2" class="form-select mr-2" name="category" onchange="this.form.action='/products/show?category=' + this.value; this.form.submit();"
+                    style="margin-bottom: 10px; margin-top: 10px;" sec:authorize="hasRole('ROLE_USER') or hasRole('???guest???')">
                 <option value="PRODUCT" th:selected="${category == null || category == 'PRODUCT'}">Show All</option>
                 <option value="FOOD" th:selected="${category == 'FOOD'}">Food</option>
                 <option value="DRINK" th:selected="${category == 'DRINK'}">Drink</option>
